# geolocation-service

./: .gitignore  README.md  case_overview.md  db.sqlite3:  pyproject.toml  util_commands.md
.github/workflows/: lint-and-test.yml
app/: alembic.ini  data_loader.py  main.py  model_geolocation.py
app/alembic/: env.py
app/alembic/versions/: 0f1d9d319c48_.py  2168b1bd397a_.py  44309677bf69_.py  45aa31cad243_create_the_initial_database.py
app/config/: __init__.py  config_dev.ini
app/data_library/: csv_parser.py  data_loader.py  geolocation_parser.py  schema_geolocation.py
app/middleware/: app_logger.py
app/sql_app/: crud.py  database.py  models.py
docker/: Dockerfile  docker-compose.yml
scripts/: build.sh
tests/: conftest.py  test_main.py
tests/data_library_tests/: test_csv_parser.py
tests/dependencies_test/: __init__.py  sqlite_dependency.py
tests/resources/: broken_schema_data.csv  test_data_dump.json  test_invalid_data.csv  test_valid_data.csv
tests/utils_test/: pydantic_validator_dependency.py  sqlite_dependency.py
